# PICO-Projects

./: CMakeLists.txt  README.md
CH2O/: CMakeLists.txt  main.c
bme280/: CMakeLists.txt  bme280.c  bme280.h
common/: CMakeLists.txt  common.h
dht/: CMakeLists.txt  dht.c  dht.h
lcd/: CMakeLists.txt  lcd.c  lcd.h
sgp30/: CMakeLists.txt  sgp30.h
zk/: CMakeLists.txt  zk.c  zk.h
